[gd_scene load_steps=2 format=3 uid="uid://dl8jxt1rwn0x8"]

[ext_resource type="Script" uid="uid://5o5pcypbkivo" path="res://scenes/organism_info_panel/organism_info_panel.gd" id="1_e2r4d"]

[node name="OrganismInfoPanel" type="PanelContainer"]
anchors_preset = -1
anchor_right = 0.167
anchor_bottom = 0.178
offset_right = -0.640015
offset_bottom = -0.240005
script = ExtResource("1_e2r4d")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Title"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AlgaeNumber" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="TotalLabel" type="Label" parent="MarginContainer/VBoxContainer/AlgaeNumber"]
layout_mode = 2
size_flags_horizontal = 3
text = "Total"

[node name="TotalValue" type="Label" parent="MarginContainer/VBoxContainer/AlgaeNumber"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 2

[node name="AliveLabel" type="Label" parent="MarginContainer/VBoxContainer/AlgaeNumber"]
layout_mode = 2
size_flags_horizontal = 3
text = "Alive"

[node name="AliveValue" type="Label" parent="MarginContainer/VBoxContainer/AlgaeNumber"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 2

[node name="DeadLabel" type="Label" parent="MarginContainer/VBoxContainer/AlgaeNumber"]
layout_mode = 2
size_flags_horizontal = 3
text = "Dead"

[node name="DeadValue" type="Label" parent="MarginContainer/VBoxContainer/AlgaeNumber"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BioMass" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="CurrentEnergyLabel" type="Label" parent="MarginContainer/VBoxContainer/BioMass"]
layout_mode = 2
size_flags_horizontal = 3
text = "Total current energy"

[node name="CurrentEnergyValue" type="Label" parent="MarginContainer/VBoxContainer/BioMass"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 2

[node name="CumulativeEnergyLabel" type="Label" parent="MarginContainer/VBoxContainer/BioMass"]
layout_mode = 2
size_flags_horizontal = 3
text = "Total cumulative energy"

[node name="CumulativeEnergyValue" type="Label" parent="MarginContainer/VBoxContainer/BioMass"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
